--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -4,4 +4,10 @@
     <string name="ButtonText">我是按钮</string>
     <string name="login">登陆</string>
     <string name="password">密码</string>
+    <string name="dialog_message">活动完成</string>
+    <string name="dialog_title">选项</string>
+    <string name="ok">是</string>
+    <string name="cancel">否</string>
+    <string name="startChatMessage">开始对话</string>
+    <string name="toastMessage">ListItemsActivity 成功： 分享信息</string>
 </resources>
