--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="startChat">Start Chat</string>
     <string name="toastMessage">ListItemsActivity passed: My information to share</string>
     <string name="sendButton">Send</string>
+    <string name="open">Open Drawer</string>
+    <string name="close">Close Drawer</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
